SERVER-74193 Make replaceCollectionGlobalIndexes idempotent